--- a/cs4575_project2/Dockerfile
+++ b/cs4575_project2/Dockerfile
@@ -1,4 +1,10 @@
-FROM ubuntu:latest
-LABEL authors="reini"
+FROM pytorch/pytorch:latest
 
-ENTRYPOINT ["top", "-b"]
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy the PyTorch training script into the container
+COPY train_model.py .
+
+# Set the command to run the training script
+CMD ["python", "train_model.py"]
