--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ numpy = "^2.2.3"
 matplotlib = "^3.10.1"
 pandas = "^2.2.3"
 colorama = "^0.4.6"
-torch = "^2.6.0"
 docker = "^7.1.0"
 pytz = "^2025.1"
 transformers = "^4.49.0"
+huggingface-hub = "^0.29.3"
+llama-cpp-python = "^0.3.8"
+deepspeed = "^0.16.4"
+accelerate = "^1.5.2"
 
 
 [build-system]
